fix:  upgrade header to  v5.8.0 of openedx for sumac and make video icon visible on course about page

--- a/tutorindigo/templates/indigo/lms/static/sass/xblock/_xblock.scss
+++ b/tutorindigo/templates/indigo/lms/static/sass/xblock/_xblock.scss
@@ -464,6 +464,20 @@
 
     }
 
+    #feedback-container{
+        background: $body-bg-d;
+        border: 1px solid $text-color-d;
+        p{
+            color: $text-color-d;
+        }
+    }
+
+    .emoji-button{
+        background-color: $body-bg-d;
+    }
+    .xblock.xmodule_display.xmodule_HtmlBlock .blue-text{color: $primary;}
+
+
     .edx-notes-wrapper{
         .annotator-hl{
             background: orange;
